--- a/Learning_Python.ipynb
+++ b/Learning_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkRy1dNauUHvlJ2SY8N6M/",
+      "authorship_tag": "ABX9TyNCIA+6iZWRhVnuxDmLWWPS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1449,6 +1449,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Range"
+      ],
+      "metadata": {
+        "id": "-C3Kbqs4gG7h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pYkgnwqggO69"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Functions"
       ],
       "metadata": {
@@ -1458,7 +1476,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def greet():    #Defining a function\n",
+        "def greet():    #Define a function\n",
         "  print(\"Hello! Lets learn Python Function!\")"
       ],
       "metadata": {
@@ -1470,7 +1488,7 @@
     {
       "cell_type": "code",
       "source": [
-        "greet()   #Calling a func"
+        "greet()   #Call a function"
       ],
       "metadata": {
         "id": "Mb9NTheRB8_p",
