--- a/Learning_Python.ipynb
+++ b/Learning_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCIA+6iZWRhVnuxDmLWWPS",
+      "authorship_tag": "ABX9TyNNdIMdrAlKADX7qqUFzZqU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1018,7 +1018,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###User Input & Loop Condition"
+        "User Input"
       ],
       "metadata": {
         "id": "zXDBpTHyzj4G"
@@ -1194,7 +1194,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#####Loop Statement"
+        "Loop Statement"
       ],
       "metadata": {
         "id": "Hn-0d4vlX_y8"
@@ -1457,12 +1457,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "num = range(5)\n",
+        "print(num)\n",
+        "\n",
+        "num = range(0, 5)\n",
+        "print(list(num))\n",
+        "\n",
+        "num = range(1, 5, 2)\n",
+        "print(list(num))"
+      ],
       "metadata": {
-        "id": "pYkgnwqggO69"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pYkgnwqggO69",
+        "outputId": "2aa19677-b90c-49cc-abc0-f09b996067f0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "range(0, 5)\n",
+            "[0, 1, 2, 3, 4]\n",
+            "[1, 3]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1592,7 +1615,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Arbitary Arguments (Any no. of param)"
+        "Arbitary Arguments (Any no. of param)"
       ],
       "metadata": {
         "id": "FmCs5XT21P47"
@@ -1653,7 +1676,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Keyword Arbitary Arguments"
+        "Keyword Arbitary Arguments"
       ],
       "metadata": {
         "id": "OUBS9CZHRqKU"
@@ -1663,13 +1686,165 @@
       "cell_type": "code",
       "source": [
         "def profile(**kwargs):\n",
-        "  print(key, args)"
+        "  for i in kwargs.keys():\n",
+        "    print(i, ' = ', kwargs[i])\n",
+        "\n",
+        "profile(Name = 'Tua' , Address = 'Kolkata', Age = 36 )\n",
+        "profile(Name = 'Tua' , Address = 'Kolkata', Age = 36, Child = 1 )"
       ],
       "metadata": {
-        "id": "UKrGQ6QwRxaF"
+        "id": "UKrGQ6QwRxaF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41c97b49-8f57-48f0-e353-476eaef5b000"
       },
-      "execution_count": null,
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name  =  Tua\n",
+            "Address  =  Kolkata\n",
+            "Age  =  36\n",
+            "Name  =  Tua\n",
+            "Address  =  Kolkata\n",
+            "Age  =  36\n",
+            "Child  =  1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Return Statement"
+      ],
+      "metadata": {
+        "id": "a5mtcpFOlXHO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def net_value(Amount, Tax = 12, Discount = 10) :    #Parameter passing with value initialization\n",
+        "  disc = Amount * Discount/100\n",
+        "  tax_val = (Amount - disc) * Tax/100\n",
+        "  netVal =  (Amount - disc) + tax_val\n",
+        "#  return netVal\n",
+        "  print(round(netVal, 3))\n",
+        "\n",
+        "net_value(499)\n",
+        "\n",
+        "net_value(499, 18, 5)\n",
+        "\n",
+        "net_value(499, 5)\n",
+        "\n",
+        "net_value(499, Discount=7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nve3rOu4lWuw",
+        "outputId": "ec7ee6e8-8935-4adb-ee00-922b3f3ca3d7"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "502.992\n",
+            "559.379\n",
+            "471.555\n",
+            "519.758\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "price =  net_value(499, 5)\n",
+        "print(price)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RGQ6HBcvoRKR",
+        "outputId": "6f6a071c-e139-4975-b0e2-503996004c2d"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "471.555\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the function 'net_amount' which calculates the net amount after applying tax and discount\n",
+        "def net_amount(Amount, tax= 18, discount = 10):\n",
+        "    # Calculate the discount amount\n",
+        "    disc = (Amount * discount / 100)\n",
+        "    # Calculate the tax amount on the discounted amount\n",
+        "    tax_amnt = (Amount - disc) * tax / 100\n",
+        "    # Calculate the net amount\n",
+        "    net = (Amount - disc) + tax_amnt\n",
+        "    # Return the net amount\n",
+        "    return net"
+      ],
+      "metadata": {
+        "id": "XurcY_Fioj7E"
+      },
+      "execution_count": 65,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Take user input for the bill amount\n",
+        "amnt = float(input('Please enter the item price tag amount : '))\n",
+        "# Take user input for the tax percentage\n",
+        "tax = float(input('Please enter tax percentage : '))\n",
+        "# Take user input for the discount percentage\n",
+        "discount = float(input('Please enter discount percentage : '))\n",
+        "\n",
+        "# Call the 'net_amount' function with user inputs and store the return value\n",
+        "return_value = net_amount(amnt, tax, discount)\n",
+        "\n",
+        "# Print the total amount to be paid\n",
+        "print('Total Amount to be paid : ', round(return_value, 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gRmYpDL0pCSj",
+        "outputId": "894cd6b5-9567-434d-bd87-30662efe99a0"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter the item price tag amount : 9999\n",
+            "Please enter tax percentage : 18\n",
+            "Please enter discount percentage : 20\n",
+            "Total Amount to be paid :  9439.06\n"
+          ]
+        }
+      ]
     }
   ]
 }
